Fixed vstudio terminal automatically activating venv

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
             "args": [
             ],
             "jinja": true,
-            "justMyCode": true
+            "justMyCode": true,
+            "python.terminal.activateEnvironment": true
         }
     ]
 }
