finished working on and commenting derp.py, changes to launch.json for debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
             "name": "Python: Flask",
             "type": "python",
             "request": "launch",
@@ -13,8 +21,7 @@
                 "FLASK_APP": "app.py",
                 "FLASK_ENV": "development"
             },
-            "args": [
-            ],
+            "args": [],
             "jinja": true,
             "justMyCode": true,
             "python.terminal.activateEnvironment": true
