--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,8 @@ services:
   db:
     image: postgres
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: secret
+    ports:
+      - 5432:5432
